test/sema/typeck/fn/shadow-param.out
error: Name `_a` bound multiple times in parameter list.
--> shadow-param.dora:1:28
 | fn f(_a: Int32, _b: Int32, _a: String) {}
                              ~~
 | 
1 error found.
